Improve repository documentation